18042025/projects/defaultproject/namespacenetworkpolicyrules/artifacts/nsrule/dev-gatekeeper-config.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: mytest
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 53
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          project: mytest
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
